# Cli-FerriLab

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs
templates/: jupyter.ipynb  latex_template.txt  typst_template.txt
